Set the stage for S3
Created the ant buildfile so that we can compile Java files that use the aws-java-sdk from terminal. Added the S3 packages to QuadTree.java and it will successfully compile from command. Just run ant && ant clean

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.class
-*.csv
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -14,3 +13,6 @@ hs_err_pid*
 
 # IDE / Editors
 .vscode
+
+# other files and paths to ignore
+*.csv
